[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Buttons/BG.png" type="Texture" id=2]
[ext_resource path="res://Assets/Buttons/BtnPressed.png" type="Texture" id=3]
[ext_resource path="res://Assets/Buttons/BtnNormal.png" type="Texture" id=4]
[ext_resource path="res://Assets/Buttons/BtnHovered.png" type="Texture" id=5]
[ext_resource path="res://Assets/Fonts/DefaultFont.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/Backgrounds/bg-1.png" type="Texture" id=7]
[ext_resource path="res://Assets/PlayerSpriteSheet.png" type="Texture" id=8]

[sub_resource type="Theme" id=1]

[sub_resource type="Animation" id=2]
resource_name = "Default"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7, 8, 9 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 4 ]
}

[node name="MainMenu" type="Node2D"]
script = ExtResource( 1 )

[node name="BG" type="Sprite" parent="."]
position = Vector2( 960, 540 )
texture = ExtResource( 2 )

[node name="Default" type="Control" parent="."]
pause_mode = 2
physics_interpolation_mode = 2
margin_right = 480.0
margin_bottom = 1080.0

[node name="NewGameBtn" type="TextureButton" parent="Default"]
margin_left = 8.0
margin_top = 288.0
margin_right = 471.0
margin_bottom = 415.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )

[node name="Label" type="Label" parent="Default/NewGameBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -15.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.776471, 0.776471, 1 )
custom_colors/font_color_shadow = Color( 0.207843, 0.156863, 0.156863, 1 )
custom_fonts/font = ExtResource( 6 )
text = "New Game"
align = 1
valign = 1

[node name="LoadGameBtn" type="TextureButton" parent="Default"]
margin_left = 8.0
margin_top = 480.0
margin_right = 471.0
margin_bottom = 607.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )

[node name="Label" type="Label" parent="Default/LoadGameBtn"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -15.0
custom_colors/font_color = Color( 1, 0.776471, 0.776471, 1 )
custom_colors/font_color_shadow = Color( 0.207843, 0.156863, 0.156863, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Continue"
align = 1
valign = 1

[node name="OverwritePrompt" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0

[node name="Sprite" type="Sprite" parent="OverwritePrompt"]
position = Vector2( 1080, 490 )
scale = Vector2( 0.5, 0.3 )
texture = ExtResource( 7 )

[node name="Sprite2" type="Sprite" parent="OverwritePrompt"]
position = Vector2( 1081.05, 435.724 )
scale = Vector2( 2.09071, 1.44882 )
texture = ExtResource( 4 )

[node name="Label2" type="Label" parent="OverwritePrompt"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 612.0
margin_top = 351.0
margin_right = 1508.0
margin_bottom = 463.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "A save already exists
Overwrite save?"
align = 1
valign = 1

[node name="Overwrite" type="TextureButton" parent="OverwritePrompt"]
margin_left = 604.0
margin_top = 519.0
margin_right = 1067.0
margin_bottom = 646.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )

[node name="Label" type="Label" parent="OverwritePrompt/Overwrite"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -15.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.776471, 0.776471, 1 )
custom_colors/font_color_shadow = Color( 0.207843, 0.156863, 0.156863, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Overwrite"
align = 1
valign = 1

[node name="CancelOverwrite" type="TextureButton" parent="OverwritePrompt"]
margin_left = 1100.0
margin_top = 519.0
margin_right = 1563.0
margin_bottom = 646.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 5 )

[node name="Label" type="Label" parent="OverwritePrompt/CancelOverwrite"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -15.0
theme = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.776471, 0.776471, 1 )
custom_colors/font_color_shadow = Color( 0.207843, 0.156863, 0.156863, 1 )
custom_fonts/font = ExtResource( 6 )
text = "Cancel"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Default"
anims/Default = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 248, 944 )
scale = Vector2( 8, 8 )
texture = ExtResource( 8 )
hframes = 27
frame = 4

[connection signal="pressed" from="Default/NewGameBtn" to="." method="_on_NewGameBtn_pressed"]
[connection signal="pressed" from="Default/LoadGameBtn" to="." method="_on_LoadGameBtn_pressed"]
[connection signal="pressed" from="OverwritePrompt/Overwrite" to="." method="_on_Overwrite_pressed"]
[connection signal="pressed" from="OverwritePrompt/CancelOverwrite" to="." method="_on_CancelOverwrite_pressed"]
